--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "svelte-parse-markup-ast-viewer",
+	"type": "module",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -8,16 +9,22 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint --cache .",
+		"format": "nr lint --fix",
 		"prepare": "npx bunpare"
 	},
 	"devDependencies": {
+		"@antfu/ni": "^0.22.0",
+		"@ryoppippi/eslint-config": "npm:@jsr/ryoppippi__eslint-config",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"eslint": "^9.8.0",
+		"eslint-plugin-format": "^0.1.2",
+		"eslint-plugin-svelte": "^2.43.0",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
-	},
-	"type": "module"
+	}
 }
